Fixed background, Upvote aligned

--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -37,7 +37,7 @@ nav ul
 #main
     padding-top:50px
 
-.container
+body
     background:url('/images/purpleBlur.jpg')
     background-position:center
     background-repeat: no-repeat
@@ -48,19 +48,17 @@ nav ul
 .upvote-container
     width:120px
     height:50px
-    padding: 12px 5px 5px 5px
     float:left
     margin-top:50px
     margin-left:25px
     border: solid #fff 2px
     position:relative
+    text-align: center
+    line-height: 50px
     a
         text-decoration: none
         color: #fff
-        position: relative
-        left: 50%
-        top: 9%
-        margin-left: -41px
+
 
 .pure-menu.pure-menu-open, .pure-menu.pure-menu-horizontal li  .pure-menu-children
     background: transparent
@@ -198,7 +196,6 @@ nav ul
             width:80px
             a
                 font-size:0.8em
-                left:59%
         .post-content-wrapper
             position: absolute
             width: 200px
